[gd_scene load_steps=4 format=2]

[ext_resource path="res://map/Vines.tscn" type="PackedScene" id=1]
[ext_resource path="res://map/GeneratedVines.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 5, 10 )

[node name="GeneratedVines" instance=ExtResource( 1 )]
position = Vector2( 53.8458, 24.6502 )
script = ExtResource( 2 )

[node name="ClimbShape" type="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
visible = false
scale = Vector2( 0.2, 1 )

[node name="UpCast" type="RayCast2D" parent="." index="3"]
position = Vector2( -5, 0 )
enabled = true

[node name="DownCast" type="RayCast2D" parent="." index="4"]
position = Vector2( -5, 0 )
enabled = true
